Details
-
Bug
-
Resolution: Done
-
P4: Low
-
5.7.1
-
None
-
d65631daa48c82cfa1edc636ee10069b1a77fb6d (qt/qtbase/dev)
Description
I've just edited a QSS stylesheet and I noticed that the values entered as HSL are treated as HSV values.
I wanted to reproduce the color #002b36. It should be hsl(192.2,100%,10.6%), but that yielded the wrong color. Instead entering the HSV value of 192.2, 100%, 21.2% yields the correct color.
Attachments
Issue Links
- relates to
-
QTBUG-70897 QSS hsv percentages do not use full hue range
-
- Closed
-
For Gerrit Dashboard: QTBUG-58804 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
241466,10 | Qt Style Sheets: add support for hsl(a) colors | dev | qt/qtbase | Status: MERGED | +2 | 0 |